<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:background="@color/background">


    <!--Genero -->



    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp">

            <Button
                android:id="@+id/maleButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_male"
                app:icon="@drawable/icon_male" />

            <Button
                android:id="@+id/femaleButton"
                style="?attr/materialIconButtonFilledStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.85"
                android:text="@string/label_female"
                app:icon="@drawable/icon_female"
                />

        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <!--Altura -->


    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
     >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_height"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"/>

            <EditText
                android:id="@+id/heightTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="170"
                android:layout_gravity="center_horizontal"
                android:textSize="35sp"
                android:textStyle="bold"
                />

            <com.google.android.material.slider.Slider
                android:id="@+id/heightSlider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stepSize="1"
                android:value="170"
                android:valueFrom="50"
                android:valueTo="300"
                app:labelBehavior="gone"
                app:tickVisible="false" />

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>



    <!--Peso -->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_weight"
                android:textAlignment="center"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/minusButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/icon_minus" />


                <TextView
                    android:id="@+id/weightTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:text="75"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="35sp" />

                <Button
                    android:id="@+id/addButton"
                    style="?attr/materialIconButtonFilledStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:icon="@drawable/icon_add"/>

            </LinearLayout>

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>


    <!--Boton Calcular -->

    <Button
        android:id="@+id/calculateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:textSize="25sp"
        android:text="@string/label_calculate" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
    <TextView
        android:id="@+id/resultBMI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=" "
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text=" "
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"/>


</LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>